Fix line-height so "Get tickets now" is aligned with play symbol

--- a/_frontend/frontsize/reactjsday-2017/widgets/intro.scss
+++ b/_frontend/frontsize/reactjsday-2017/widgets/intro.scss
@@ -110,7 +110,7 @@
     font-family: $font-family-header;
     font-size: 24px;
     font-weight: 700;
-    //line-height: s(9);
+    line-height: s(5);
     padding: s(2) s(4);
     position: absolute;
     right: 0;
